--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "eslint-plugin-import": "^2.19.1",
     "parcel-bundler": "^1.12.4",
     "sass": "^1.24.2"
+  },
+  "dependencies": {
+    "stylelint": "^12.0.1",
+    "stylelint-config-twbs-bootstrap": "^1.1.0"
   }
 }
